--- a/slides/css/custom-dark.css
+++ b/slides/css/custom-dark.css
@@ -29,6 +29,15 @@
     font-weight: 100;
 }
 
+/* darker background for code samples */
+.hljs {
+    /* background: rgb(5, 5, 5); */
+    background: black;
+    /* border: 1px solid slategray !important; */
+    /* border-top: 1px solid slategray !important; */
+    /* border-right: 1px solid slategray !important; */
+}
+
 /* Other customizations ------------------------------ */
 
 /* Small font for links, notes */
@@ -66,6 +75,7 @@ img[alt^=fullscreen-] {
 .reveal section img[alt^=noborder-] {
     border: none;
     box-shadow: none;
+    background-color: black;
 }
 
 span.clouditem {
