--- a/slides/css/custom-dark.css
+++ b/slides/css/custom-dark.css
@@ -33,9 +33,8 @@
 .hljs {
     /* background: rgb(5, 5, 5); */
     background: black;
-    /* border: 1px solid slategray !important; */
-    /* border-top: 1px solid slategray !important; */
-    /* border-right: 1px solid slategray !important; */
+    border: 1px solid slategray !important;
+    border-radius: 8px;
 }
 
 /* Other customizations ------------------------------ */
