change headline color

--- a/slides/css/theme/dark.css
+++ b/slides/css/theme/dark.css
@@ -51,7 +51,7 @@ body {
 .reveal h5,
 .reveal h6 {
     margin: 0 0 20px 0;
-    color: #0c8b7a;
+    color:  #27d8c0; /* #0c8b7a;  rgba(12, 139, 122, 0.9); */
     font-family: "League Gothic", Impact, sans-serif;
     font-weight: normal;
     line-height: 1.2;
