code highlight color white

--- a/slides/css/custom-dark.css
+++ b/slides/css/custom-dark.css
@@ -22,7 +22,7 @@
 
 .reveal .slides section .mycodemark-highlight .hljs-comment {
     font-weight: bold;
-    color: black;
+    color: white;
 }
 
 .reveal .slides section .my-semi-hide-always {
