--- a/slides/css/custom-dark.css
+++ b/slides/css/custom-dark.css
@@ -86,6 +86,27 @@ img[alt^=fullscreen-] {
     background-color: black;
 }
 
+.reveal section img[alt$=logo] {
+    border: none;
+    box-shadow: none;
+    background-color: white;
+    width: 200px;
+    position: fixed;
+    top: 150px;
+    left: 0;
+}
+
+.reveal section img[alt^=portrait] {
+    border: none;
+    box-shadow: none;
+    background-color: white;
+    width: 200px;
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+
+
 span.clouditem {
     padding-left: 0.15em;
     padding-right: 0.05em;
